tests/cargo-ui/unstable-attr/invalid/expected
error: failed to parse `#[kani::unstable]`: missing `feature` field\
src/lib.rs\
|\
| #[kani::unstable(\
| ^^^^^^^^^^^^^^^^^^\
|\
= note: expected format: #[kani::unstable(feature="<IDENTIFIER>", issue="<ISSUE>", reason="<DESCRIPTION>")]\
= note: this error originates in the attribute macro `kani::unstable` (in Nightly builds, run with -Z macro-backtrace for more info)

error: internal compiler error
